--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   background-color: #f5f5f505; /* off-white */
   color: #021024; /* dark blue */
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 /* Header */
@@ -584,4 +585,5 @@ footer img {
 #copy {
   margin: 1rem 0 1rem 0;
 }
+
 
